--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     volumes:
       - data-volume:/data/db
     environment:
-      MONGO_INITDB_DATABASE: dbTechs
+      MONGO_INITDB_DATABASE: [Database Name Here]
     ports:
       - "27017:27017"
     networks:
