--- a/package.json
+++ b/package.json
@@ -1,29 +1,36 @@
 {
-  "name": "boilerplate-nextjs-with-mongo",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "production": "next build && next start"
-  },
-  "dependencies": {
-    "mongo": "^0.1.0",
-    "next": "14.1.4",
-    "react": "^18",
-    "react-dom": "^18"
-  },
-  "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.4",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5"
-  }
+    "name": "boilerplate-nextjs-with-mongo",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint",
+        "production": "next build && next start"
+    },
+    "dependencies": {
+        "mongo": "^0.1.0",
+        "mongodb": "^6.10.0",
+        "next": "14.1.4",
+        "react": "^18",
+        "react-dom": "^18",
+        "react-spinners": "^0.14.1",
+        "sanitize-html": "^2.13.1"
+    },
+    "devDependencies": {
+        "@types/node": "^20",
+        "@types/react": "^18",
+        "@types/react-dom": "^18",
+        "@types/sanitize-html": "^2.13.0",
+        "autoprefixer": "^10.0.1",
+        "eslint": "^8",
+        "eslint-config-next": "14.1.4",
+        "postcss": "^8",
+        "tailwindcss": "^3.3.0",
+        "typescript": "^5"
+    },
+    "browser": {
+        "child_process": false
+    }
 }
